tests/agl/rejections/type/while_non_bool.agl
while 42 do
  ()
done
